# ethers-db

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
contracts/: Store.sol
dbfaker/: README.md  go.mod  go.sum  main.go
src/: account.rs  client.rs  db.rs  ffi.rs  lib.rs  middleware.rs  reader.rs  storage.rs  tables.rs  txgen.rs  utils.rs
src/ffi/: interface.rs  mod.rs  writer.rs
src/models/: account.rs  mod.rs  storage.rs
src/test/: mod.rs  rand.rs
src/test/ffi/: interface.rs  writer.rs
