[package]
name = "ethers-db"
version = "0.1.0"
authors = ["gio256 <gio256@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "ethers_db"
path = "src/lib.rs"
[[bin]]
name = "txgen"
path = "src/txgen.rs"

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
async-trait = { version = "0.1.50", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false }
akula = { git = "https://github.com/akula-bft/akula" }
mdbx = { package = "libmdbx", version = "0.1" }
fastrlp = { version = "0.1", features = [
    "derive",
    "ethereum-types",
    "ethnum",
    "std",
] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
string = { git = "https://github.com/carllerche/string" }
bytes = { version = "1", features = ["serde"] }
anyhow = "1"
once_cell = "1"

[dev-dependencies]

# Akula patches
[patch.crates-io]
arrayvec = { git = "https://github.com/vorot93/arrayvec", branch = "pop-unchecked" }
enr = { git = "https://github.com/rust-ethereum/enr", branch = "vorot93/update-deps" }
ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging" }

# Patch for entry_insert destabilization: https://github.com/rust-lang/rust/pull/94105
[patch."https://github.com/akula-bft/akula"]
akula = { path = "../ext/akula" }
# akula = { git = "https://github.com/gi0van/akula", branch = "develop"}
